--- a/index.html
+++ b/index.html
@@ -1,17 +1,76 @@
 <!DOCTYPE html>
 
 <html>
+
 <head>
-    <title>Under Construction</title>
+    <link rel="stylesheet" href="etc/style.css">
+    <link rel="icon" href="images/hold_icon.png">
+    <title>TEST - WIRE</title>
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <div class="head">
+        <div><img src="images/hold_logo.png"></div>
 
-    <hr />
+        <a href="#C1"><div><h1>Xander Wahl</h1></div></a>
+        
+        <a href="#C2"><div class="button"><p>About</p></div></a>
+        <a href="#C3"><div class="button"><p>Contact</p></div></a>
+    </div>
+    <div class="foot" id="C1">
+        <div><img src="images/hold_logo.png"></div>
+    </div>
+    <!-- Cludgy solution - Figure out how to correct this -->
 
-    <p>Under Construction</p>
+    <!-- Home Section -->
+    <div class="even" style="background: url(images/hold_square.png) no-repeat center; background-size: cover;">
+        <!-- WHYYYYYYYYYYYY -->
+        <div id="C2">
+           <h2>Xander Wahl</h2>
+            <p>Test</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio nisi fuga quis deserunt ab cupiditate, excepturi unde, doloribus laborum nulla quae reiciendis ea sit dolorum perferendis tempora natus possimus dolorem.</p>
+        </div>
+    </div>
 
+    <!-- About Section -->
+    <div class="odd">
+        <div class="column">
+           <h2>About Me</h2>
+            <p>Test</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam aut sed numquam, voluptatum iure magnam eveniet! Odio quia nisi illum aliquid pariatur tempore, non facere. Nostrum molestiae amet fuga adipisci.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil minima obcaecati autem quam, quisquam deleniti quod eveniet assumenda deserunt rem maxime, alias quibusdam, possimus quo hic? Magnam architecto qui optio?</p>
+        </div>
+
+        <div class="column">
+            <img src="images/hold_square.png">
+        </div>
+
+        <div class="row-clear"></div>
+    </div>
+
+    <!-- Contact Section -->
+    <div class="even"  id="C3">
+        <div class="column">
+            <img src="images/hold_square.png">
+        </div>
+
+        <div class="column">
+           <h2>Contact Me</h2>
+            <p>Test</p>
+
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo eos odio, dolorum adipisci, nobis accusamus repudiandae consequatur earum repellat itaque sequi magnam, aut asperiores optio nesciunt quo rerum quam necessitatibus.</p>
+        </div>
+
+        <div class="row-clear"></div>
+    </div>
+
+    <div class="foot">
+        <a href="#"><img src="images/face_icon.png"></a>
+        <a href="#"><img src="images/insta_icon.png"></a>
+        <a href="#"><img src="images/X_icon.png"></a>
+        <a href="#"><img src="images/git_icon.png"></a>
+    </div>
 </body>
 
 </html>
